# PromptDefender

./: README.md  pyproject.toml
app/: main.py
assets/: attack_bank.txt  attack_bank_round2.txt  benign_bank.txt  benign_bank_round2.txt
benchmarks/: run.py
promptdefender/: __init__.py  detector.py  heuristics.yaml  policy.py  sanitizer.py
scripts/: augment_banks.py
tests/: test_detector.py
